[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-common"
version = "0.1.0"
description = "Aequiludium 共享基础库：交易日历、存储引擎、并发框架、ClickHouse 驱动"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "huangbogeng", email = "huangbogeng@outlook.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["quantitative", "trading", "clickhouse", "calendar", "finance"]
dependencies = [
    "polars>=1.39.2",
    "dynaconf>=3.2.13",
    "loguru>=0.7.0",
    "sqlparse>=0.5.5",
    "clickhouse-driver>=0.2.6",
    "pyarrow>=23.0.0",
    "pandas>=3.0.0",
    "joblib>=1.3.0",
    "rich>=14.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["xcals*", "blazestore*", "ygo*", "clickhouse_df*"]

[tool.setuptools.package-data]
xcals = [".xcals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N802", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
